--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-html, body, #root {
+html,
+body,
+#root {
   height: 100%
 }
 
@@ -17,6 +19,10 @@ html, body, #root {
   justify-content: center;
 }
 
+.wide {
+  width: 100%
+}
+
 .ui-provider {
   height: 0
 }
@@ -24,5 +30,71 @@ html, body, #root {
 .vertical-and-spaced {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   gap: 1rem
+}
+
+.iframe-container {
+  width: 500px;
+  height: 300px;
+}
+
+.iframe-sizing {
+  height: 100%;
+  width: 100%;
+}
+
+.log-container {
+  height: 200px;
+  width: 500px;
+  overflow: auto;
+  background-color: #222222;
+  color: #ffffff;
+}
+
+.log-container-inner {
+
+  padding: 1rem;
+  background-color: #222222;
+  color: #ffffff;
+
+  .linecontainer {
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+    margin-right: 1rem;
+    padding-right: 1rem;
+
+    code {
+      white-space: normal;
+      /*: nowrap;*/
+      word-break: break-all;
+    }
+
+    :hover {
+      background-color: #333333;
+    }
+  }
+
+  .linecontainer.selected {
+    background-color: #333333;
+  }
+
+  .linecontainer.error {
+    color: #ff7675;
+  }
+
+  .linecontainer.warning {
+    color: #e17055;
+  }
+
+  .linecontainer.info {
+    color: #00cec9;
+  }
+
+  .linecontainer.verbose {
+    color: #ffeaa7;
+  }
 }
